# Cara

./: .env.example  .gitignore  README.md  pyproject.toml
cara/: config.py  handlers.py  link_service.py  main.py  state.py
cara/shopeeAPI/: __init__.py  auth.py  client.py  countries.py  errors.py
scripts/: get_message_usernames.py  poll_messages.py
